--- a/userprofiles/userprofiles/profile_base.html
+++ b/userprofiles/userprofiles/profile_base.html
@@ -76,7 +76,7 @@
                   </a>
                 </li>
                 <li class="link">
-                  <a href="">
+                  <a href="{% url 'profile_schedule' %}">
                       <span>Schedule</span>
                   </a>
                 </li>
