Schedule prototype template

--- a/userprofiles/userprofiles/profile_schedule.html
+++ b/userprofiles/userprofiles/profile_schedule.html
@@ -1,3 +1,28 @@
 {% extends "userprofiles/profile_base.html" %}
 {% block profile %}
+<section class="section">
+<div class="columns is-mobile is-multiline">
+  <div class="column is-4">
+    <a class="button is-large is-fullwidth">1º Semestre</a>
+  </div>
+  <div class="column is-4">
+    <a class="button is-large is-fullwidth">2º Semeste</a>
+  </div>
+  <div class="column">
+    <div class="contain" id="schedulecontainer"></div>
+  </div>
+
+</div>
+
+</section>
+<section class="section schedulesection">
+  <div class="container">
+    <div class="content">
+      <figure class="image">
+        <img src="https://bulma.io/images/placeholders/128x128.png">
+      </figure>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
