Details of schedule prototype

--- a/userprofiles/userprofiles/profile_base.html
+++ b/userprofiles/userprofiles/profile_base.html
@@ -87,7 +87,7 @@
                   </a>
                 </li>
                 <li class="link">
-                  <a href="">
+                  <a href="{% url 'profile_results' %}">
                       <span>Results</span>
                   </a>
                 </li>
