Change Password Done; Change of strategy, instead of forms in modals, each form will have its page- simply

--- a/userprofiles/userprofiles/profile_details.html
+++ b/userprofiles/userprofiles/profile_details.html
@@ -23,9 +23,36 @@
    </div>
 </div>
   <!-- Edit prefrences modal -->
+  <!-- Change Password -->
+  <div id="change_password_modal" class="modal">
+    <div class="modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title">Edit Details</p>
+          <button class="delete" onclick="toggleStuff('change_password_modal','is-active')"></button>
+        </header>
+        <section class="modal-card-body">
+           <!-- Content -->
+           <form method="post">
+           {% csrf_token %}
+           {{password_form}}
+           <button type="submit">Save changes</button>
+         </form>
+           <!-- Content -->
+        </section>
+        <footer class="modal-card-foot">
+           <button class="button is-success" type="submit">Save changes</button>
+           <a class="button" onclick="toggleStuff('change_password_modal','is-active')">Cancel</a>
+        </footer>
+    </div>
+</div>
+
+
+
+  <!-- Change Password -->
 <div class="container">
   <!-- This button should eventually be transfered to profile details page -->
   <a class="edit-preferences button is-primary is-outlined" onclick="toggleStuff('detail_modal','is-active')">Edit details</a>
+  <a class="edit-preferences button is-danger is-outlined" href="{% url 'change_password' %}">Change Password</a>
   <br>
 </div>
 <br>
@@ -35,7 +62,6 @@
         <p> <b>Name</b>: {{user.profile.name}}</p>
         <p><b>Surname</b>: {{user.profile.surname}}</p>
         <p><b>Birthdate</b>: {{user.profile.birthdate}}</p>
-        <!--  -->
         <p><b>Country</b>: {{user.profile.address.country}}</p>
 
       </div>
