--- a/userprofiles/userprofiles/profile_page.html
+++ b/userprofiles/userprofiles/profile_page.html
@@ -2,13 +2,15 @@
 {% block profile %}
 <div class="section">
     <div class="columns is-mobile multiline">
-      <div class="column is-8 is-4-table is-10-mobile">
+
+      <!-- Week Details prototype -->
+      <!-- <div class="column is-8 is-4-table is-10-mobile">
           <span class="title is-bold">Week Details</span>
           <br>
           <br>
           <!-- This is the weekly news table - Probably will be processed outside this page-->
           <!-- THIS IS DUMMY DATA -->
-          <div id="weekly" class="box">
+          <!-- <div id="weekly" class="box">
                <p class="is-size-5 has-text-dark"><b>Inteligencia Artificial</b></p>
               <ul>
                 <li><b>Teorica</b>: Resolução de Problemas. Introdução formulação segundo o Paradigma do Espaço de Estados.</li>
@@ -26,7 +28,7 @@
               </ul>
 
           </div>
-      </div>
+      </div> -->
 
       <div class="column is-half is-4-table is-10-mobile">
           <span class="title is-bold">Classes</span>
